Logos no longer flicker when entering day view mode in Tiger (54)

--- a/trunk/skins/orangehc/skin.css
+++ b/trunk/skins/orangehc/skin.css
@@ -65,13 +65,15 @@ div.onechannel img.logo
   width: 3.4em;
   height: 3.4em;
   margin: 0.3em 0.2em 0em 0.6em;
-  opacity: 0.8; 
   float: left;
+  opacity: 1;
 }
 
 div.onechannel img.logo:hover
 {
-  opacity: 1 !important;
+  background: #a2a2a2;
+  -webkit-border-radius: 0.4em;
+  -moz-border-radius: 0.4em;
 }
 
 div.programs
