--- a/trunk/skins/plastic/skin.css
+++ b/trunk/skins/plastic/skin.css
@@ -66,13 +66,15 @@ div.onechannel img.logo
   width: 3.4em;
   height: 3.4em;
   margin: 0.3em 0.2em 0em 0.6em;
-  opacity: 0.8; 
   float: left;
+  opacity: 1;
 }
 
 div.onechannel img.logo:hover
 {
-  opacity: 1 !important;
+  background: #7d91ab;
+  -webkit-border-radius: 0.4em;
+  -moz-border-radius: 0.4em;
 }
 
 div.programs
